# command-line-rust

./: .gitignore
01_hello/: Cargo.toml
01_hello/tests/: cli.rs
02_echor/src/: main.rs  main_1.rs
02_echor/tests/: cli.rs
03_catr/: Cargo.toml
03_catr/src/: main.rs
04_headr/: Cargo.toml
04_headr/src/: main.rs
05_wcr/: Cargo.toml
05_wcr/src/: main.rs
06_uniqr/: Cargo.toml
06_uniqr/src/: main.rs
07_findr/: Cargo.toml
07_findr/src/: main.rs
08_csv_intro/: Cargo.toml
08_csv_intro/src/: main.rs
08_cutr/: Cargo.toml
08_cutr/src/: main.rs
09_grepr/: Cargo.toml
09_grepr/src/: main.rs
10_commr/: Cargo.toml
10_commr/src/: main.rs
11_tailr/: Cargo.toml
11_tailr/src/: main.rs
12_fortuner/: .gitignore  Cargo.toml
12_fortuner/src/: main.rs
13_calr/: Cargo.toml
13_calr/src/: main.rs
14_lsr/: Cargo.toml
14_lsr/src/: main.rs  owner.rs
