[package]
name = "calr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
